[package]
name = "client-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.6"
env_logger = "0.11"
futures-util = "0.3"
http-body-util = "0.1"
hyper = { version = "1.3", features = ["client", "server", "http1"] }
log = "0.4"
pin-project-lite = "0.2"
tokio = { version = "1.37", features = [
    "fs",
    "macros",
    "net",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "test-util",
] }
tokio-util = { version = "0.7", features = ["io"] }
